[project]
name = "ops"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==2.4.0",
    "accelerate==1.10.1",
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "aistudio-sdk==0.3.8",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "async-timeout==5.0.1",
    "attrs==26.1.0",
    "audioread==3.1.0",
    "av==15.1.0",
    "bce-python-sdk==0.9.60",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "blis==1.3.3",
    "boto3==1.42.97",
    "botocore==1.42.97",
    "catalogue==2.0.10",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpathlib==0.23.0",
    "cobble==0.1.4",
    "coloredlogs==15.0.1",
    "colorlog==6.10.1",
    "confection==1.3.3",
    "contourpy==1.3.0",
    "cryptography==47.0.0",
    "ctranslate2==4.7.1",
    "cycler==0.12.1",
    "cymem==2.0.13",
    "datasets==4.5.0",
    "datasketch==1.10.0",
    "decorator==5.2.1",
    "deepspeed==0.13.2",
    "dill==0.4.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "einops==0.8.2",
    "email-validator==2.3.0",
    "emoji==2.15.0",
    "et_xmlfile==2.0.0",
    "exceptiongroup==1.3.1",
    "faiss-cpu==1.13.2",
    "fast-langdetect==0.2.5",
    "fastapi==0.136.1",
    "faster-whisper==1.2.1",
    "fasttext-predict==0.9.2.4",
    "filelock==3.19.1",
    "Flask==3.1.3",
    "flatbuffers==25.12.19",
    "fonttools==4.60.2",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "future==1.0.0",
    "greenlet==3.5.0",
    "grpcio==1.80.0",
    "h11==0.16.0",
    "hf-xet==1.4.2",
    "hjson==3.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-retries==0.5.0",
    "huggingface_hub==0.36.2",
    "humanfriendly==10.0",
    "HyperPyYAML==1.2.2",
    "idna==3.11",
    "ImageIO==2.37.3",
    "imagesize==1.5.0",
    "importlib_metadata==8.7.1",
    "importlib_resources==6.5.2",
    "iopath==0.1.10",
    "itsdangerous==2.2.0",
    "jieba==0.42.1",
    "Jinja2==3.1.6",
    "jiter==0.14.0",
    "jmespath==1.1.0",
    "joblib==1.3.2",
    "json_repair==0.59.5",
    "kiwisolver==1.4.7",
    "langid==1.1.6",
    "lap==0.5.13",
    "layoutparser==0.3.4",
    "lazy-loader==0.5",
    "librosa==0.10.2.post1",
    "llvmlite==0.44.0",
    "loguru==0.7.3",
    "lxml==6.1.0",
    "magika==1.0.2",
    "mammoth==1.12.0",
    "Markdown==3.10.2",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.3",
    "matplotlib==3.9.4",
    "mdurl==0.1.2",
    "mineru==3.1.6",
    "mineru_vl_utils==0.2.6",
    "modelscope==1.34.0",
    "more-itertools==10.8.0",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "multidict==6.7.1",
    "multiprocess==0.70.18",
    "murmurhash==1.0.15",
    "networkx==3.2.1",
    "ninja==1.13.0",
    "numba==0.61.2",
    "numpy==2.2.6",
    "nvidia-ml-py==13.595.45",
    "onnxruntime==1.19.2",
    "openai==2.33.0",
    "openai-whisper==20250625",
    "opencc-python-reimplemented==0.1.7",
    "opencv-contrib-python==4.10.0.84",
    "opencv-contrib-python-headless==4.13.0.92",
    "opencv-python==4.13.0.92",
    "opencv-python-headless==4.13.0.92",
    "openpyxl==3.1.5",
    "openslide-python==1.4.3",
    "opt-einsum==3.3.0",
    "packaging==26.0",
    "paddleocr==3.3.0",
    "paddlepaddle==3.2.2",
    "paddlex==3.3.6",
    "pandas==2.3.3",
    "pdf2image==1.17.0",
    "pdfminer.six==20251230",
    "pdfplumber==0.11.9",
    "pdftext==0.6.3",
    "phonenumbers==9.0.29",
    "pillow==11.3.0",
    "platformdirs==4.9.6",
    "polars==1.36.1",
    "polars-runtime-32==1.36.1",
    "pooch==1.9.0",
    "portalocker==3.2.0",
    "preshed==3.0.13",
    "presidio-analyzer==2.2.25",
    "presidio-anonymizer==2.2.25",
    "prettytable==3.16.0",
    "propcache==0.4.1",
    "protobuf==6.33.5",
    "psutil==7.2.2",
    "ptflops==0.7",
    "py-cpuinfo==9.0.0",
    "pyahocorasick==2.3.1",
    "pyarrow==21.0.0",
    "pyclipper==1.3.0.post6",
    "pycorrector==1.1.3",
    "pycparser==3.0",
    "pycryptodome==3.23.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.14.0",
    "pydantic_core==2.41.5",
    "pydub==0.25.1",
    "Pygments==2.19.2",
    "pylatexenc==2.10",
    "pynvml==13.0.1",
    "pyparsing==3.3.2",
    "pypdf==6.10.2",
    "pypdfium2==4.30.0",
    "pypinyin==0.55.0",
    "pypptx-with-oxml==1.0.3",
    "pytesseract==0.3.13",
    "python-bidi==0.6.7",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.27",
    "pytz==2026.1.post1",
    "PyYAML==6.0.2",
    "qwen-vl-utils==0.0.14",
    "rapidocr-onnxruntime==1.4.4",
    "regex==2026.1.15",
    "reportlab==4.4.10",
    "requests==2.32.5",
    "requests-file==3.0.1",
    "rich==14.3.3",
    "robust-downloader==0.0.2",
    "ruamel.yaml==0.19.1",
    "s3transfer==0.16.1",
    "safetensors==0.7.0",
    "scikit-image==0.26.0",
    "scikit-learn==1.8.0",
    "scipy==1.13.1",
    "sentence-transformers==5.4.1",
    "sentencepiece==0.2.1",
    "shapely==2.0.7",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart_open==7.6.0",
    "sniffio==1.3.1",
    "soundfile==0.12.1",
    "soupsieve==2.8.3",
    "soxr==1.0.0",
    "spacy==3.8.14",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "speechbrain==1.0.3",
    "SQLAlchemy==2.0.49",
    "srsly==2.5.3",
    "starlette==1.0.0",
    "sympy==1.14.0",
    "tensorboard==2.16.2",
    "tensorboard-data-server==0.7.2",
    "tensorboardX==2.6.2.2",
    "TextGrid==1.6.1",
    "thinc==8.3.13",
    "threadpoolctl==3.6.0",
    "tifffile==2026.3.3",
    "tiktoken==0.12.0",
    "timm==1.0.26",
    "tldextract==5.3.1",
    "tokenizers==0.22.2",
    "torch==2.8.0",
    "torch_npu==2.8.0",
    "torchaudio==2.8.0",
    "torchlibrosa==0.0.4",
    "torchvision==0.23.0",
    "tqdm==4.67.3",
    "transformers==4.57.6",
    "typer==0.23.2",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "ujson==5.11.0",
    "ultralytics==8.4.19",
    "ultralytics-thop==2.0.18",
    "urllib3==2.6.3",
    "uvicorn==0.46.0",
    "wasabi==1.1.3",
    "wcwidth==0.6.0",
    "weasel==1.0.0",
    "Werkzeug==3.1.8",
    "wrapt==2.1.2",
    "xlsxwriter==3.2.9",
    "xmltodict==1.0.4",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zhconv==1.4.3",
    "zipp==3.23.0",
]
